able to load g1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,7 +118,9 @@ usd = [
     # Used for parsing `.usd` mesh files
     "usd-core<25.11",
     # import stubs
-    "types-usd==24.5.2"
+    "types-usd==24.5.2",
+    # omniverse-kit
+    "omniverse-kit"
 ]
 
 [project.scripts]
