Avoid running black if not necessary.

--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -130,7 +130,7 @@ jobs:
           pip3 install torch --index-url https://download.pytorch.org/whl/cpu
 
       - name: Black Format Check
-        if: matrix.OS == 'ubuntu-24.04' && matrix.PYTHON_VERSION == '3.12'
+        if: ${{ matrix.OS == 'ubuntu-24.04' && matrix.PYTHON_VERSION == '3.12' && matrix.GS_BACKEND == 'cpu' && matrix.GS_ENABLE_NDARRAY == '1' }}
         run: |
           pip install black
           black --line-length 120 --check .
