--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10,<3.14"
 dependencies = [
     "psutil",
-    "gstaichi==4.3.1",
+    "gstaichi==4.4.0b1",
     "pydantic>=2.11.0",
     "numpy>=1.26.4",
     "trimesh",
