--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ dependencies = [
     # and AttributeError: 'builtins.MeshWithData' object has no attribute 'get_point_attribute'.
     # Did you mean: 'add_point_attribute'?
     "pysplashsurf<=0.12.0.2",
+    "huggingface-hub>=1.1.7",
 ]
 
 [project.optional-dependencies]
