--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -122,27 +122,14 @@ jobs:
           srun \
             --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
             --container-mounts=\
-          "${HOME}/.venv":/root/.venv,\
+          "${HOME}/.cache":/root/.cache,\
           /mnt/data/artifacts:/mnt/data/artifacts,\
           "${{ github.workspace }}":/root/workspace \
             --no-container-mount-home --container-workdir=/root/workspace \
             --export=${SLURM_ENV_VARS} \
             --partition=hpc-mid --nodes=1 --gpus=8 --exclusive --time="${TIMEOUT_MINUTES}" \
             --job-name=${SLURM_JOB_NAME} \
-            bash -e -s << 'EOF'
-              # sudo apt update
-              # sudo apt install -y tmate
-              # tmate -S /tmp/tmate.sock new-session -d
-              # tmate -S /tmp/tmate.sock wait tmate-ready
-              # tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}'
-
-              source /root/.venv/bin/activate
-              pip install --no-input ".[dev,render]"
-
-              pytest --print -x -m "benchmarks" ./tests
-              cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
-
-              # tmate -S /tmp/tmate.sock wait tmate-exit
+            bash .github/workflows/scripts/production_script.sh
           EOF
       - name: Kill srun job systematically
         if: always()
