--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -151,7 +151,7 @@ jobs:
       - name: Test
         run: |
           srun ${SRUN_COMMON} bash -e -s << 'EOF'
-            source .venv/bin/activate
+            source /tmp/venv/bin/activate
             pytest --print -x -m "benchmarks" ./tests
             cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
           EOF
