--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -137,7 +137,7 @@ jobs:
           SRUN_COMMON=(
             "--jobid=${SLURM_JOB_ID}"
             "--container-image=/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh"
-            "--container-mounts=/mnt/data/artifacts:/mnt/data/artifacts,${{ github.workspace }}:/root/workspace,${HOME}/.cache/uv:/root/.cache/uv"
+            "--container-mounts=/mnt/data/artifacts:/mnt/data/artifacts,${{ github.workspace }}:/root/workspace,${HOME}/.cache/pip:/root/.cache/pip"
             "--no-container-mount-home"
             "--container-workdir=/root/workspace"
             "--export=NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN,GS_ENABLE_NDARRAY=${GS_ENABLE_NDARRAY}"
