--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -133,12 +133,18 @@ jobs:
           fi
           echo "SLURM_JOB_ID=${SLURM_JOB_ID}" >> $GITHUB_ENV
 
-          SRUN_COMMON_BARE="--jobid=${SLURM_JOB_ID}"
-          SRUN_COMMON_BARE="${SRUN_COMMON_BARE} --container-name=${CONTAINER_NAME}"
-          SRUN_COMMON_BARE="${SRUN_COMMON_BARE} --container-mounts=/mnt/data/artifacts:/mnt/data/artifacts,${{ github.workspace }}:/root/workspace,${HOME}/.cache/pip:/root/.cache/pip"
-          SRUN_COMMON_BARE="${SRUN_COMMON_BARE} --no-container-mount-home"
-          SRUN_COMMON_BARE="${SRUN_COMMON_BARE} --container-workdir=/root/workspace"
-          SRUN_COMMON_BARE="${SRUN_COMMON_BARE} --export=NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN,WANDB_API_KEY,GS_ENABLE_NDARRAY=${GS_ENABLE_NDARRAY}"
+          # Base container configuration (shared across all srun calls)
+          SRUN_CONTAINER_BASE="--jobid=${SLURM_JOB_ID}"
+          SRUN_CONTAINER_BASE="${SRUN_CONTAINER_BASE} --container-name=${CONTAINER_NAME}"
+          SRUN_CONTAINER_BASE="${SRUN_CONTAINER_BASE} --container-mounts=/mnt/data/artifacts:/mnt/data/artifacts,${{ github.workspace }}:/root/workspace,${HOME}/.cache/pip:/root/.cache/pip"
+          SRUN_CONTAINER_BASE="${SRUN_CONTAINER_BASE} --no-container-mount-home"
+          SRUN_CONTAINER_BASE="${SRUN_CONTAINER_BASE} --container-workdir=/root/workspace"
+          
+          # For initial container start: minimal exports to avoid BASH_ENV issues during bootstrap
+          SRUN_INIT="${SRUN_CONTAINER_BASE} --export=NVIDIA_DRIVER_CAPABILITIES=all"
+          
+          # For subsequent commands: full environment including BASH_ENV
+          SRUN_COMMON_BARE="${SRUN_CONTAINER_BASE} --export=NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN,WANDB_API_KEY,GS_ENABLE_NDARRAY=${GS_ENABLE_NDARRAY}"
           echo "SRUN_COMMON_BARE=${SRUN_COMMON_BARE}" >> "$GITHUB_ENV"
 
           SRUN_COMMON="--overlap ${SRUN_COMMON_BARE}"
@@ -146,9 +152,19 @@ jobs:
 
           # Start the container once (with image) and keep it alive
           srun --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
-               ${SRUN_COMMON_BARE} \
+               ${SRUN_INIT} \
                sleep "${TIMEOUT_MINUTES}m" &
           echo "BASE_SRUN_PID=$!" >> $GITHUB_ENV
+          
+          # Wait for container to be fully initialized
+          for i in $(seq 1 30); do
+            if srun ${SRUN_COMMON} /bin/true 2>/dev/null; then
+              echo "Container is ready"
+              break
+            fi
+            echo "Waiting for container to be ready (attempt $i/30)..."
+            sleep 2
+          done
 
       - name: Build
         run: |
